# rijq

./: .gitignore  Makefile  README.md
demo/: build.gradle  settings.gradle
demo/src/main/java/rijq/runner/: RunnerApplication.java
demo/src/main/java/rijq/runner/modules/: LogModule.java
demo/src/test/java/rijq/runner/: RunnerApplicationTests.java
java/: build.gradle  settings.gradle
java/src/main/java/rijq/framework/: Scan.java
java/src/main/java/rijq/framework/annotaions/: Handler.java  Module.java
java/src/main/java/rijq/framework/handlers/: InitRunner.java  JQClient.java
protos/: enums.proto  obj.proto  typles.proto
rust/: Cargo.toml  build.rs
rust/src/: lib.rs  log.rs  run.rs
