[package]
name = "rijq"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.0", features = ["full"] }
ricq = { git = "http://github.com/lz1998/ricq.git" }
ricq-core = { git = "http://github.com/lz1998/ricq.git" }
anyhow = "1.0.71"
prost = "0.11.9"
jni = { version = "0.21.1", features = ["invocation"] }
async-trait = "0.1.68"
bytes = "1.4.0"
tracing = "0.1.37"
reqwest = "0.11.17"
rand = "0.8.5"
qr2term = "0.3.1"
image = "0.24.6"
rqrr = "0.6.0"
lazy_static = "1.4.0"
tracing-subscriber = "0.3.17"
serde_json = "1.0.96"

[build-dependencies]
prost-build = "0.11.9"

[lib]
crate-type = ["cdylib"]
